:bug: Making it fit vertically on mobile

--- a/css/nyancat.css
+++ b/css/nyancat.css
@@ -62,10 +62,10 @@ main {
   align-items: center;
   justify-content: space-between;
   margin-top: 1em;
-  margin-left: 0.8em;
-  margin-left: 0.8em;
+  margin-left: 0.6em;
+  margin-left: 0.6em;
   height: calc(100vh - 1em);
-  width: calc(100vw - 1.6em); /* no idea why box-sizing doesn't work here */
+  width: calc(100vw - 1.2em); /* no idea why box-sizing doesn't work here */
   position: relative;
   box-sizing: border-box;
 }
@@ -78,7 +78,7 @@ main > p {
   flex-grow: 0;
   font-family: "Orbitron", Comic Sans MS, sans-serif;
   font-weight: bold;
-  font-size: 16pt;
+  font-size: 14pt;
 }
 
 #gif {
@@ -99,7 +99,7 @@ main > .spacer {
 }
 
 #meme-mobile #meme {
-  height: 50vh;
+  height: 30vh;
   flex-grow: 0;
   z-index: -5;
 }
